========================
   beancount: CHANGES
========================
Note: This file contains only changes in the 'default' branch.


2015-09-12

  - Added to beancount.plugins.split_expenses a new script that is able to
    generate the typical kinds of reports you would need to provide to
    participants in a shared project or travel on their specific expenses and
    contributions, as well as a breakdown of their expenses per category
    (expenses account) and final balances for each participants. Invoke it like
    this:

      python3 -m beancount.plugins.split_expenses <filename>

    The script lives in the same file as the split_expenses plugin, because it
    is tightly related to it. It presumes the input file will process through
    this plugin. Try to run it on the example files under
    beancount/examples/sharing.

  - Added a new file "examples/sharing/duxbury2015.beancount" which contains a
    new example of sharing expenses on a trip between three people.

  - Starter cleanup of beancount.el contributed by Stefan Monnier. More changes
    to come, this is basically a no-op patch. It just moves code around and
    makes other such cosmetic changes to silence some compiler warnings, prepare
    for subsequent changes, better follow coding conventions etc. Detail:

    * beancount.el: Add some standard file headers, license, and
      sectioning comments.  Sprinkle a few FIXMEs while I'm here.
      (beancount-font-lock-defaults): Rename from beancount-font-lock-keywords,
      since this corresponds to font-lock-keywords and not to
      font-lock-defaults.
      (beancount-directive-names, beancount-font-lock-keywords,
      beancount-accounts):  Move variables before their first use (to silence
      the compiler).
      (beancount-mode-map): Use a proper defvar instead of define-minor-mode's
      half-broken :keymap.
      (beancount-mode): Merge the make-local-variables into their corresponding
      `set'.